fix displaying products list and header on mobile view

--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -6,7 +6,7 @@
   z-index: 1;
   background: #ffaaaa;
   border-bottom: 1px solid #d46a6a;
-  height: 10vh;
+  min-height: 10vh;
 }
 
 .header h1 {
